[package]
name = "json-rpc-client-derive"
version = "0.1.0"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/alttch/json-rpc-client-derive"
description = "Derive macros for JSON RPC client"
readme = "README.md"
keywords = []

[dependencies]
darling = "0.14.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "1", features = ["full"] }

[lib]
proc-macro = true
